# ClawDesk

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  INSTALL  LICENSE  README.md  drizzle.config.ts  install.sh  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.claude/: launch.json
.github/workflows/: release.yml
public/: index.html  startup-error.html
scripts/: KEYS.md  copy-standalone-assets.mjs  gen-license.mjs  generate-keys.mjs  release.sh  smoke-test-bundle.mjs
skill/: SKILL.md  install.sh
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/(dashboard)/: layout.tsx
src/app/login/: page.tsx
src/components/: BackupScheduler.tsx  BudgetWatcher.tsx  CommandPalette.tsx  ExportMenu.tsx  LicenseModal.tsx  NotificationBell.tsx  NotificationWatcher.tsx  OrchestrationGraph.tsx  ProGate.tsx  SkillUpdater.tsx  ThemeProvider.tsx  UpdateBanner.tsx
src/contexts/: LicenseContext.tsx
src/db/: index.ts  schema.ts
src/hooks/: use-auto-sync.ts  use-backup-scheduler.ts  use-budget-watcher.ts  use-dashboard-config.ts  use-notifications.ts
src/lib/: agent-colors.ts  cron-utils.ts  dashboard-metrics.ts  export.ts  integrations.ts  license.ts  model-providers.ts  project-colors.ts  store.ts  toast.ts  utils.ts
src/mcp/: server.mts
src/server/: cli-env.ts  cli-run.ts  cost-utils.ts  license-server.ts  require-pro.ts  task-service.ts
src/types/: index.ts
(+94 files in other folders)
